--- a/index.html
+++ b/index.html
@@ -82,6 +82,6 @@
         </section>
     </div>
     <div id="particles-js"></div>
-    <script src="scripts.js"></script>
+    <script src="JS/scripts-main.js"></script>
 </body>
 </html>
