--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <header class="header">
 <div class="title">
- <h1>Revy Network</h1>
+ <h1>RecursionRealm</h1>
  </div>
 </div>
     </header>
