--- a/mc/index.html
+++ b/mc/index.html
@@ -5,7 +5,7 @@
     <meta name="theme-color" content="#191A2E">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dynamic Portfolio</title>
-    <link rel="stylesheet" href="CSS/styles-main.css">
+    <link rel="stylesheet" href="../CSS/styles-main.css">
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 </head>
@@ -119,6 +119,6 @@
     </div>
 
     <canvas id="particles-canvas"></canvas>
-    <script src="JS/scripts-main.js"></script>
+    <script src="../JS/scripts-main.js"></script>
 </body>
 </html>
