--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
     <div class="container">
         <section class="section" id="about">
             <h2>About Me</h2>
-            <p>I'm a passionate web developer with a keen eye for design and a love for creating seamless user experiences. With over 5 years of experience, I specialize in front-end technologies, including HTML, CSS, JavaScript, and frameworks like React.</p>
-            <p>I have worked on various projects, ranging from dynamic websites, e-commerce platforms, and mobile apps to back-end solutions with Node.js and Python. My journey in web development has allowed me to create intuitive user interfaces that blend design and functionality.</p>
-            <p>Beyond technical skills, I enjoy collaborating with teams, solving complex problems, and continuously learning new technologies. In my free time, I love experimenting with UI/UX trends and contributing to open-source projects.</p>
-        </section>
+            <p>Hai guys! Jadi, aku tuh siswa kelas IX di MTsN 5 Sragen, lagi suka banget sama web development dan coding.</p>
+
+<p>Sekarang sih lagi fokus ke project RevyNetwork di GitHub, bikin server Minecraft sama fitur-fitur keren lainnya.</p>
+
+<p>Selain itu, aku juga lagi explore teknologi baru kayak HyperOS, dan sering banget mainin JavaScript buat bikin animasi yang smooth dan interaksi web yang catchy.</p>
+
+<p>Pokoknya, always up for new things!</p>        </section>
 
         <section class="section" id="skills">
             <h2>Skills</h2>
