--- a/mc/index.html
+++ b/mc/index.html
@@ -23,12 +23,9 @@
 
     <div class="container">
         <section class="section" id="about">
-            <h2>About Me</h2>
-            <p>I'm a passionate web developer with a keen eye for design and a love for creating seamless user experiences. With over 5 years of experience, I specialize in front-end technologies, including HTML, CSS, JavaScript, and frameworks like React.</p>
-            <p>I have worked on various projects, ranging from dynamic websites, e-commerce platforms, and mobile apps to back-end solutions with Node.js and Python. My journey in web development has allowed me to create intuitive user interfaces that blend design and functionality.</p>
-            <p>Beyond technical skills, I enjoy collaborating with teams, solving complex problems, and continuously learning new technologies. In my free time, I love experimenting with UI/UX trends and contributing to open-source projects.</p>
-        </section>
-
+            <h2>Minecraft</h2>
+            <p>Minecraft itu game sandbox yang bikin lo bisa ngelakuin hampir apa aja kayak bangun, eksplorasi, dan bertahan hidup di dunia yang serba kotak kotak. Entah lo mau bikin kreasi gila atau sekadar jalan-jalan, Minecraft selalu punya hal baru yang bikin betah.</p>        </section>
+<p>Minecraft Patch ini nambahin dukungan buat resource pack shaders di Render Dragon, jadi grafis Minecraft lo bisa jadi lebih keren. Dengan mc patch ini, tampilan minecraft lo bakal makin mantap dan memuaskan.</p>
 
         <section class="section" id="app-downloads">
             <h2>App Downloads</h2>
