--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RecursionRealm<</title>
     <link rel="stylesheet" href="CSS/styles-main.css">
+    <link rel="stylesheet" href="CSS/styles-mc.css">
         <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 </head>
@@ -53,26 +54,27 @@
             </div>
         </section>
 
-<section class="section" id="projects">
-    <h2>Projects</h2>
-    <div class="projects">
-        <div class="project">
-            <h3>E-commerce Platform</h3>
-            <p>A full-stack e-commerce solution with real-time inventory management.</p>
-            <a href="https://ecommerce.com" class="project-link">Visit Project</a>
-        </div>
-        <div class="project">
-            <h3>Social Media Dashboard</h3>
-            <p>An analytics dashboard for tracking social media engagement across platforms.</p>
-            <a href="https://dashboard.com" class="project-link">Visit Project</a>
-        </div>
-        <div class="project">
-            <h3>Fitness Tracker App</h3>
-            <p>A mobile-first web app for tracking workouts and nutrition.</p>
-            <a href="https://fitnessapp.com" class="project-link">Visit Project</a>
-        </div>
-    </div>
-</section>
+<section class="section" id="app-downloads">
+            <h2>Page</h2>
+            <div class="app-grid">
+                <div class="app-item">
+                    <h3>Minecraft</h3>
+                    <p>Download Minecraft Patch</p>
+                     <a href="#" class="download-link" data-url="mc">Go to page</a>
+                <div class="app-item">
+                    <img src="icon.png" alt="App 3 Icon" class="app-icon">
+                    <h3>HTML</h3>
+                    <p>Tutorial HTML</p>
+                    <a href="#" class="download-link" data-url="HTMLtutor">Download</a>
+                </div>
+                <div class="app-item">
+                    <img src="icon.png" alt="App 4 Icon" class="app-icon">
+                    <h3>Github Page</h3>
+                    <p>Github Page Website Tutorial</p>
+                    <a href="#" class="download-link" data-url="GitPGTutor">Download</a>
+                </div>
+            </div>
+        </section>
 
         <section class="section" id="contact">
             <h2>Contact Me</h2>
@@ -86,5 +88,6 @@
     </div>
     <canvas id="particles-canvas"></canvas>
     <script src="JS/scripts-main.js"></script>
+    <script src="JS/scripts-mc.js"></script>
 </body>
 </html>
