--- a/mc/index.html
+++ b/mc/index.html
@@ -24,9 +24,9 @@
     <div class="container">
         <section class="section" id="about">
             <h2>Minecraft</h2>
-            <p>Minecraft itu game sandbox yang bikin lo bisa ngelakuin hampir apa aja kayak bangun, eksplorasi, dan bertahan hidup di dunia yang serba kotak kotak. Entah lo mau bikin kreasi gila atau sekadar jalan-jalan, Minecraft selalu punya hal baru yang bikin betah.</p>        </section>
+            <p>Minecraft itu game sandbox yang bikin lo bisa ngelakuin hampir apa aja kayak bangun, eksplorasi, dan bertahan hidup di dunia yang serba kotak kotak. Entah lo mau bikin kreasi gila atau sekadar jalan-jalan, Minecraft selalu punya hal baru yang bikin betah.</p>
 <p>Minecraft Patch ini nambahin dukungan buat resource pack shaders di Render Dragon, jadi grafis Minecraft lo bisa jadi lebih keren. Dengan mc patch ini, tampilan minecraft lo bakal makin mantap dan memuaskan.</p>
-
+        </section>
         <section class="section" id="app-downloads">
             <h2>App Downloads</h2>
             <div class="app-grid">
