--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RecursionRealm<</title>
-    <link rel="stylesheet" href="CSS/styles-main.css">
+<!--     <link rel="stylesheet" href="CSS/styles-main.css"> -->
     <link rel="stylesheet" href="CSS/styles-mc.css">
         <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
@@ -46,7 +46,6 @@
                 <span class="skill">HTML5</span>
                 <span class="skill">CSS3</span>
                 <span class="skill">JavaScript</span>
-                <span class="skill">React</span>
                 <span class="skill">Node.js</span>
                 <span class="skill">Python</span>
                 <span class="skill">UI/UX Design</span>
@@ -62,16 +61,14 @@
                     <p>Download Minecraft Patch</p>
                      <a href="#" class="download-link" data-url="mc">Go to page</a>
                 <div class="app-item">
-                    <img src="icon.png" alt="App 3 Icon" class="app-icon">
                     <h3>HTML</h3>
                     <p>Tutorial HTML</p>
-                    <a href="#" class="download-link" data-url="HTMLtutor">Download</a>
+                    <a href="#" class="download-link" data-url="HTMLtutor">Go to page</a>
                 </div>
                 <div class="app-item">
-                    <img src="icon.png" alt="App 4 Icon" class="app-icon">
                     <h3>Github Page</h3>
                     <p>Github Page Website Tutorial</p>
-                    <a href="#" class="download-link" data-url="GitPGTutor">Download</a>
+                    <a href="#" class="download-link" data-url="GitPGTutor">Go to page</a>
                 </div>
             </div>
         </section>
@@ -87,7 +84,7 @@
         </section>
     </div>
     <canvas id="particles-canvas"></canvas>
-    <script src="JS/scripts-main.js"></script>
+<!--     <script src="JS/scripts-main.js"></script> -->
     <script src="JS/scripts-mc.js"></script>
 </body>
 </html>
