--- a/index.html
+++ b/index.html
@@ -83,6 +83,17 @@
             </form>
         </section>
     </div>
+        <div id="download-modal" class="modal">
+        <div class="modal-content">
+            <h2>Download Confirmation</h2>
+            <p>Are you sure you want to continue to thus page?</p>
+            <div class="modal-buttons">
+                <button id="confirm-download">Yes, Continue to page</button>
+                <button id="cancel-download">Cancel</button>
+            </div>
+        </div>
+    </div>
+
     <canvas id="particles-canvas"></canvas>
 <!--     <script src="JS/scripts-main.js"></script> -->
     <script src="JS/scripts-mc.js"></script>
