--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                     <h3>Minecraft</h3>
                     <p>Download Minecraft Patch</p>
                      <a href="#" class="download-link" data-url="mc">Go to page</a>
+                </div>
                 <div class="app-item">
                     <h3>HTML</h3>
                     <p>Tutorial HTML</p>
