--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RecursionRealm<</title>
+    <title>RevyNets<</title>
+    <link rel="icon" href="logo.png" type="image/png">
 <!--     <link rel="stylesheet" href="CSS/styles-main.css"> -->
     <link rel="stylesheet" href="CSS/styles-mc.css">
         <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
@@ -24,7 +25,7 @@
 
     <header class="header">
 <div class="title">
- <h1>RecursionRealm</h1>
+ <h1>RevyNets</h1>
  </div>
 </div>
     </header>
