--- a/HTMLtutor/index.html
+++ b/HTMLtutor/index.html
@@ -5,7 +5,7 @@
     <meta name="theme-color" content="#191A2E">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RevyNets HTML</title>
-    <link rel="icon" href="logo.png" type="image/png">
+    <link rel="icon" href="../logo.png" type="image/png">
     <link rel="stylesheet" href="../CSS/styles-main.css">
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
