--- a/GitPGTutor/index.html
+++ b/GitPGTutor/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="theme-color" content="#191A2E">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic Portfolio</title>
+    <title>RevyNets Github Page</title>
     <link rel="stylesheet" href="../CSS/styles-main.css">
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
@@ -17,7 +17,7 @@
 
     <header class="header">
         <div class="title">
-            <h1>Revy Network</h1>
+            <h1>RevyNets</h1>
         </div>
     </header>
 
