--- a/mc/index.html
+++ b/mc/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="theme-color" content="#191A2E">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic Portfolio</title>
+    <title>RevyNets Minecraft</title>
+    <link rel="icon" href="../logo.png" type="image/png">
     <link rel="stylesheet" href="../CSS/styles-mc.css">
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
