--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>RevyNets<</title>
     <link rel="icon" href="logo.png" type="image/png">
 <!--     <link rel="stylesheet" href="CSS/styles-main.css"> -->
-    <link rel="stylesheet" href="CSS/styles-mc.css">
+    <link rel="stylesheet" href="CSS/styles-main.css">
         <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 </head>
@@ -98,6 +98,6 @@
 
     <canvas id="particles-canvas"></canvas>
 <!--     <script src="JS/scripts-main.js"></script> -->
-    <script src="JS/scripts-mc.js"></script>
+    <script src="JS/scripts-main.js"></script>
 </body>
 </html>
