--- a/mc/index.html
+++ b/mc/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RevyNets Minecraft</title>
     <link rel="icon" href="../logo.png" type="image/png">
-    <link rel="stylesheet" href="../CSS/styles-mc.css">
+    <link rel="stylesheet" href="../CSS/styles-main.css">
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 </head>
@@ -117,6 +117,6 @@
     </div>
 
     <canvas id="particles-canvas"></canvas>
-    <script src="../JS/scripts-mc.js"></script>
+    <script src="../JS/scripts-main.js"></script>
 </body>
 </html>
