--- a/mc/index.html
+++ b/mc/index.html
@@ -18,7 +18,7 @@
 
     <header class="header">
         <div class="title">
-            <h1>Revy Network</h1>
+            <h1>RevyNets</h1>
         </div>
     </header>
 
