--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-5113271313208303">
-    <title>RevyNets<</title>
+    <title>RevyNets</title>
     <link rel="icon" href="logo.png" type="image/png">
 <!--     <link rel="stylesheet" href="CSS/styles-main.css"> -->
     <link rel="stylesheet" href="CSS/styles-main.css">
@@ -66,9 +66,9 @@
                      <a href="#" class="download-link" data-url="mc">Go to page</a>
                 </div>
                 <div class="app-item">
-                    <h3>HTML</h3>
-                    <p>Tutorial HTML</p>
-                    <a href="#" class="download-link" data-url="HTMLtutor">Go to page</a>
+                    <h3>Search</h3>
+                    <p>Custome Search</p>
+                    <a href="#" class="download-link" data-url="search">Go to page</a>
                 </div>
                 <div class="app-item">
                     <h3>Github Page</h3>
@@ -90,7 +90,7 @@
     </div>
         <div id="download-modal" class="modal">
         <div class="modal-content">
-            <h2>Download Confirmation</h2>
+            <h2>Page Confirmation</h2>
             <p>Are you sure you want to continue to thus page?</p>
             <div class="modal-buttons">
                 <button id="confirm-download">Yes, Continue to page</button>
