--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript"> var infolinks_pid = 3426470; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
     <meta name="google-adsense-account" content="ca-pub-5113271313208303">
     <title>RevyNets</title>
     <link rel="icon" href="logo.png" type="image/png">
