--- a/index.html
+++ b/index.html
@@ -4,46 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RevyNets</title>
-    <link rel="icon" href="logo.png" type="image/png">
-<!--     <link rel="stylesheet" href="CSS/styles-main.css"> -->
     <link rel="stylesheet" href="CSS/styles-main.css">
-        <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5113271313208303"
-     crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+
 </head>
 <body>
-    <!-- Loading screen -->
     <div class="loading-overlay">
         <div class="spinner"></div>
     </div>
 
-<!--     <div class="floating-shapes">
-    <div class="shape" style="width: 80px; height: 80px; left: 10%; top: 10%;"></div>
-    <div class="shape" style="width: 60px; height: 60px; right: 20%; top: 20%;"></div>
-    <div class="shape" style="width: 100px; height: 100px; left: 30%; bottom: 30%;"></div>
-    <div class="shape" style="width: 50px; height: 50px; right: 10%; bottom: 10%;"></div>
-</div> -->
+    <div class="title-screen">
+        <h1 class="main-title">RevyNets</h1>
+    </div>
+        <canvas id="abstract-bg"></canvas>
 
     <header class="header">
-<div class="title">
- <h1>RevyNets</h1>
- </div>
-</div>
+        <h1 class="header-title">RevyNets</h1>
     </header>
-
+    
     <div class="container">
-        <section class="section" id="about">
+        <section id="about" class="section">
             <h2>About Me</h2>
             <p>Hai guys! Jadi, aku tuh siswa kelas IX di MTsN 5 Sragen, lagi suka banget sama web development dan coding.</p>
+            <p>Sekarang sih lagi fokus ke project Rynets di GitHub, bikin server Minecraft sama fitur-fitur keren lainnya.</p>
+            <p>Selain itu, aku juga lagi explore teknologi baru kayak HyperOS, dan sering banget mainin JavaScript buat bikin animasi yang smooth dan interaksi web yang catchy.</p>
+            <p>Pokoknya, always up for new things!</p>
+        </section>
 
-<p>Sekarang sih lagi fokus ke project RevyNetwork di GitHub, bikin server Minecraft sama fitur-fitur keren lainnya.</p>
-
-<p>Selain itu, aku juga lagi explore teknologi baru kayak HyperOS, dan sering banget mainin JavaScript buat bikin animasi yang smooth dan interaksi web yang catchy.</p>
-
-<p>Pokoknya, always up for new things!</p>        </section>
-
-        <section class="section" id="skills">
+        <section id="skills" class="section">
             <h2>Skills</h2>
             <div class="skills">
                 <span class="skill">HTML5</span>
@@ -56,17 +44,17 @@
             </div>
         </section>
 
-<section class="section" id="app-downloads">
+        <section id="app-downloads" class="section">
             <h2>Page</h2>
             <div class="app-grid">
                 <div class="app-item">
                     <h3>Minecraft</h3>
                     <p>Download Minecraft Patch</p>
-                     <a href="#" class="download-link" data-url="mc">Go to page</a>
+                    <a href="#" class="download-link" data-url="mc">Go to page</a>
                 </div>
                 <div class="app-item">
                     <h3>Search</h3>
-                    <p>Custome Search</p>
+                    <p>Custome Google Search</p>
                     <a href="#" class="download-link" data-url="search">Go to page</a>
                 </div>
                 <div class="app-item">
@@ -77,20 +65,21 @@
             </div>
         </section>
 
-        <section class="section" id="contact">
-            <h2>Contact Me</h2>
-            <form class="contact-form" action="https://formspree.io/f/xqazvvww" method="POST">
-    <input type="text" name="name" placeholder="Your Name" required>
-    <input type="email" name="email" placeholder="Your Email" required>
-    <textarea rows="5" name="message" placeholder="Your Message" required></textarea>
-    <button type="submit">Send Message</button>
-</form>
+        <section id="contact" class="section">
+         <h2>Contact Me</h2>
+      <form class="contact-form" action="https://formspree.io/f/xqazvvww" method="POST">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="email" placeholder="Your Email" required>
+        <textarea rows="5" name="message" placeholder="Your Message" required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
         </section>
     </div>
-        <div id="download-modal" class="modal">
+
+    <div id="download-modal" class="modal">
         <div class="modal-content">
             <h2>Page Confirmation</h2>
-            <p>Are you sure you want to continue to thus page?</p>
+            <p>Are you sure you want to continue to this page?</p>
             <div class="modal-buttons">
                 <button id="confirm-download">Yes, Continue to page</button>
                 <button id="cancel-download">Cancel</button>
@@ -98,8 +87,6 @@
         </div>
     </div>
 
-    <canvas id="particles-canvas"></canvas>
-<!--     <script src="JS/scripts-main.js"></script> -->
     <script src="JS/scripts-main.js"></script>
 </body>
 </html>
