--- a/mc/index.html
+++ b/mc/index.html
@@ -7,7 +7,6 @@
     <title>RevyNets Minecraft</title>
     <link rel="icon" href="../logo.png" type="image/png">
     <link rel="stylesheet" href="../CSS/styles-main.css">
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 </head>
 <body>
@@ -15,6 +14,11 @@
     <div class="loading-overlay">
         <div class="spinner"></div>
     </div>
+
+    <div class="title-screen">
+        <h1 class="main-title">RevyNets</h1>
+    </div>
+        <canvas id="abstract-bg"></canvas>
 
     <header class="header">
         <div class="title">
@@ -116,8 +120,6 @@
             </div>
         </div>
     </div>
-
-    <canvas id="particles-canvas"></canvas>
     <script src="../JS/scripts-main.js"></script>
 </body>
 </html>
