--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
                 <div class="app-item">
                     <h3>Minecraft</h3>
                     <p>Download Minecraft Patch</p>
-                    <a href="#" class="download-link" data-url="mc">Go to page</a>
+                    <a href="#" class="download-link" data-url="https://rynets.githib.io/mc">Go to page</a>
                 </div>
                 <div class="app-item">
                     <h3>Search</h3>
                     <p>Custome Google Search</p>
-                    <a href="#" class="download-link" data-url="search">Go to page</a>
+                    <a href="#" class="download-link" data-url="https://rynets.github.io/search">Go to page</a>
                 </div>
                 <div class="app-item">
                     <h3>Github Page</h3>
                     <p>Github Page Website Tutorial</p>
-                    <a href="#" class="download-link" data-url="GitPGTutor">Go to page</a>
+                    <a href="#" class="download-link" data-url="https://rynets.github.io/GitPGTutor">Go to page</a>
                 </div>
             </div>
         </section>
