--- a/mc/index.html
+++ b/mc/index.html
@@ -2,15 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="theme-color" content="#191A2E">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RevyNets Minecraft</title>
-    <link rel="icon" href="../logo.png" type="image/png">
-    <link rel="stylesheet" href="../CSS/styles-main.css">
-    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+    <link rel="stylesheet" href="CSS/styles-main.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+
 </head>
 <body>
-    <!-- Loading screen -->
     <div class="loading-overlay">
         <div class="spinner"></div>
     </div>
@@ -21,18 +19,17 @@
         <canvas id="abstract-bg"></canvas>
 
     <header class="header">
-        <div class="title">
-            <h1>RevyNets</h1>
-        </div>
+        <h1 class="header-title">RevyNets</h1>
     </header>
-
+    
     <div class="container">
-        <section class="section" id="about">
+        <section id="about" class="section">
             <h2>Minecraft</h2>
             <p>Minecraft itu game sandbox yang bikin lo bisa ngelakuin hampir apa aja kayak bangun, eksplorasi, dan bertahan hidup di dunia yang serba kotak kotak. Entah lo mau bikin kreasi gila atau sekadar jalan-jalan, Minecraft selalu punya hal baru yang bikin betah.</p>
 <p>Minecraft Patch ini nambahin dukungan buat resource pack shaders di Render Dragon, jadi grafis Minecraft lo bisa jadi lebih keren. Dengan mc patch ini, tampilan minecraft lo bakal makin mantap dan memuaskan.</p>
         </section>
-        <section class="section" id="app-downloads">
+
+         <section class="section" id="app-downloads">
             <h2>App Downloads</h2>
             <div class="app-grid">
                 <div class="app-item">
@@ -120,6 +117,7 @@
             </div>
         </div>
     </div>
-    <script src="../JS/scripts-main.js"></script>
+
+    <script src="JS/scripts-main.js"></script>
 </body>
 </html>
