--- a/mc/index.html
+++ b/mc/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RevyNets Minecraft</title>
-    <link rel="stylesheet" href="CSS/styles-main.css">
+    <link rel="stylesheet" href="../CSS/styles-main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
 
 </head>
@@ -118,6 +118,6 @@
         </div>
     </div>
 
-    <script src="JS/scripts-main.js"></script>
+    <script src="../JS/scripts-main.js"></script>
 </body>
 </html>
