--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>RevyNets</title>
     <link rel="stylesheet" href="CSS/styles-main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
-
+    <script type='text/javascript' src='//pl24534474.cpmrevenuegate.com/07/5a/47/075a4734ec24295a9ee3353cc12d2a8d.js'></script>
 </head>
 <body>
     <div class="loading-overlay">
