--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-adsense-account" content="ca-pub-5113271313208303">
     <title>RevyNets</title>
     <link rel="stylesheet" href="CSS/styles-main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <script type='text/javascript' src='//pl24534474.cpmrevenuegate.com/07/5a/47/075a4734ec24295a9ee3353cc12d2a8d.js'></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5113271313208303"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="loading-overlay">
