--- a/GitPGTutor/index.html
+++ b/GitPGTutor/index.html
@@ -2,29 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="theme-color" content="#191A2E">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RevyNets Github Page</title>
-    <link rel="icon" href="../logo.png" type="image/png">
-    <link rel="stylesheet" href="../CSS/styles-main.css">
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+    <title>RevyNets Minecraft</title>
+    <link rel="stylesheet" href="CSS/styles-main.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+
 </head>
 <body>
-    <!-- Loading screen -->
     <div class="loading-overlay">
         <div class="spinner"></div>
     </div>
 
-    <header class="header">
-        <div class="title">
-            <h1>RevyNets</h1>
-        </div>
-    </header>
+    <div class="title-screen">
+        <h1 class="main-title">RevyNets</h1>
+    </div>
+        <canvas id="abstract-bg"></canvas>
 
+    <header class="header">
+        <h1 class="header-title">RevyNets</h1>
+    </header>
+    
     <div class="container">
-      <section class="section">
-            <h2>Pendahuluan</h2>
+        <section id="about" class="section">
+                        <h2>Pendahuluan</h2>
             <p>GitHub Pages adalah layanan hosting web statis yang memungkinkan Anda menerbitkan situs web langsung dari repositori GitHub Anda. Ini ideal untuk membuat situs web pribadi, portofolio, atau dokumentasi proyek. Tutorial ini akan memandu Anda langkah demi langkah dalam membuat dan menerbitkan situs web menggunakan GitHub Pages.</p>
         </section>
 
@@ -105,7 +105,18 @@
             <p>Semoga tutorial ini membantu Anda memulai dengan GitHub Pages! Jika Anda memiliki pertanyaan atau memerlukan bantuan lebih lanjut, jangan ragu untuk bertanya.</p>
         </section>
     </div>
-    <canvas id="particles-canvas"></canvas>
-    <script src="../JS/scripts-main.js"></script>
+
+    <div id="download-modal" class="modal">
+        <div class="modal-content">
+            <h2>Download Confirmation</h2>
+            <p>Are you sure you want to download this app?</p>
+            <div class="modal-buttons">
+                <button id="confirm-download">Yes, Download</button>
+                <button id="cancel-download">Cancel</button>
+            </div>
+        </div>
+    </div>
+
+    <script src="JS/scripts-main.js"></script>
 </body>
 </html>
