--- a/GitPGTutor/index.html
+++ b/GitPGTutor/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RevyNets Minecraft</title>
+    <title>RevyNets Github Page Tutorial</title>
     <link rel="stylesheet" href="CSS/styles-main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
 
