--- a/search/index.html
+++ b/search/index.html
@@ -165,7 +165,7 @@
         <div class="search-container">
             <h1>Explore with Google</h1>
             <div class="search-wrapper">
-                <input type="text" id="search-input" class="search-input" placeholder="Cari game...">
+                <input type="search" id="search-input" class="search-input" placeholder="Cari di google...">
                 <lord-icon src="https://cdn.lordicon.com/wjyqkiew.json" trigger="hover" colors="primary:#000000,secondary:#000000" class="lordicon-container"></lord-icon>
             </div>
             <div id="suggestions"></div>
