--- a/mc/index.html
+++ b/mc/index.html
@@ -6,26 +6,7 @@
     <title>RevyNets Minecraft</title>
     <link rel="stylesheet" href="../CSS/styles-main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
-    <script type="text/javascript">
-	atOptions = {
-		'key' : '02694d0607319576d2591c68a9041c27',
-		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.topcreativeformat.com/02694d0607319576d2591c68a9041c27/invoke.js"></script>
-<script type="text/javascript">
-	atOptions = {
-		'key' : '497bbf939024f5f5a24aafd589c3f193',
-		'format' : 'iframe',
-		'height' : 90,
-		'width' : 728,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.topcreativeformat.com/497bbf939024f5f5a24aafd589c3f193/invoke.js"></script>
+
 </head>
 <body>
     <div class="loading-overlay">
@@ -47,6 +28,35 @@
             <p>Minecraft itu game sandbox yang bikin lo bisa ngelakuin hampir apa aja kayak bangun, eksplorasi, dan bertahan hidup di dunia yang serba kotak kotak. Entah lo mau bikin kreasi gila atau sekadar jalan-jalan, Minecraft selalu punya hal baru yang bikin betah.</p>
 <p>Minecraft Patch ini nambahin dukungan buat resource pack shaders di Render Dragon, jadi grafis Minecraft lo bisa jadi lebih keren. Dengan mc patch ini, tampilan minecraft lo bakal makin mantap dan memuaskan.</p>
         </section>
+            <div id="ads" class="section">
+            <h2>Sponsored Content</h2>
+            <div class="ad-container">
+                <div class="ad-item">
+                    <script type="text/javascript">
+                        atOptions = {
+                            'key' : '02694d0607319576d2591c68a9041c27',
+                            'format' : 'iframe',
+                            'height' : 250,
+                            'width' : 300,
+                            'params' : {}
+                        };
+                    </script>
+                    <script type="text/javascript" src="//www.topcreativeformat.com/02694d0607319576d2591c68a9041c27/invoke.js"></script>
+                </div>
+                <div class="ad-item">
+                    <script type="text/javascript">
+                        atOptions = {
+                            'key' : '497bbf939024f5f5a24aafd589c3f193',
+                            'format' : 'iframe',
+                            'height' : 90,
+                            'width' : 728,
+                            'params' : {}
+                        };
+                    </script>
+                    <script type="text/javascript" src="//www.topcreativeformat.com/497bbf939024f5f5a24aafd589c3f193/invoke.js"></script>
+                </div>
+            </div>
+        </div>
 
          <section class="section" id="app-downloads">
             <h2>App Downloads</h2>
