--- a/GitPGTutor/index.html
+++ b/GitPGTutor/index.html
@@ -27,6 +27,36 @@
                         <h2>Pendahuluan</h2>
             <p>GitHub Pages adalah layanan hosting web statis yang memungkinkan Anda menerbitkan situs web langsung dari repositori GitHub Anda. Ini ideal untuk membuat situs web pribadi, portofolio, atau dokumentasi proyek. Tutorial ini akan memandu Anda langkah demi langkah dalam membuat dan menerbitkan situs web menggunakan GitHub Pages.</p>
         </section>
+        
+            <div id="ads" class="section">
+            <h2>Sponsored Content</h2>
+            <div class="ad-container">
+                <div class="ad-item">
+                    <script type="text/javascript">
+                        atOptions = {
+                            'key' : '02694d0607319576d2591c68a9041c27',
+                            'format' : 'iframe',
+                            'height' : 250,
+                            'width' : 300,
+                            'params' : {}
+                        };
+                    </script>
+                    <script type="text/javascript" src="//www.topcreativeformat.com/02694d0607319576d2591c68a9041c27/invoke.js"></script>
+                </div>
+                <div class="ad-item">
+                    <script type="text/javascript">
+                        atOptions = {
+                            'key' : '497bbf939024f5f5a24aafd589c3f193',
+                            'format' : 'iframe',
+                            'height' : 90,
+                            'width' : 728,
+                            'params' : {}
+                        };
+                    </script>
+                    <script type="text/javascript" src="//www.topcreativeformat.com/497bbf939024f5f5a24aafd589c3f193/invoke.js"></script>
+                </div>
+            </div>
+        </div>
 
         <section class="section">
             <h2>Prasyarat</h2>
