--- a/GitPGTutor/index.html
+++ b/GitPGTutor/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RevyNets Github Page Tutorial</title>
-    <link rel="stylesheet" href="CSS/styles-main.css">
+    <link rel="stylesheet" href="../CSS/styles-main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
 
 </head>
