--- a/search/index.html
+++ b/search/index.html
@@ -154,61 +154,22 @@
             z-index: 1;
         }
         /* Ad Section */
-#ads.section {
-    background-color: rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(15px);
-    border-radius: 20px;
-    padding: 30px;
-    margin-bottom: 30px;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05);
-    transform: translateY(50px);
-    opacity: 0;
-    transition: all 0.5s ease;
-}
-
-#ads.section.animate {
-    transform: translateY(0);
-    opacity: 1;
-}
-
-#ads h2 {
-    font-size: 2rem;
-    margin-bottom: 20px;
-    color: #007aff;
-    text-align: center;
-}
-
 .ad-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
+    position: absolute;
+    z-index: -999999;
+    display: block;
+    overflow: hidden;
+    width: 1px;
+    height: 1px;
 }
 
 .ad-item {
-    background: rgba(255, 255, 255, 0.1);
-    border-radius: 10px;
-    padding: 10px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease;
-}
-
-.ad-item:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
-}
-
-/* Responsive design for ads */
-@media (max-width: 768px) {
-    .ad-container {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .ad-item {
-        width: 100%;
-        max-width: 300px;
-    }
+    position: absolute;
+    z-index: -999999;
+    display: block;
+    overflow: hidden;
+    width: 1px;
+    height: 1px;
 }
     </style>
 </head>
@@ -228,8 +189,6 @@
             <div id="suggestions"></div>
         </div>
     </section>
-        <div id="ads" class="section">
-            <h2>Sponsored Content</h2>
             <div class="ad-container">
                 <div class="ad-item">
                     <script type="text/javascript">
@@ -256,7 +215,6 @@
                     <script type="text/javascript" src="//www.topcreativeformat.com/497bbf939024f5f5a24aafd589c3f193/invoke.js"></script>
                 </div>
             </div>
-        </div>
 
     <script>
         let searchData = [];
@@ -399,13 +357,10 @@
                 canvas.height = window.innerHeight;
             });
         }
-        function animateSections() {
-    const sections = document.querySelectorAll('.section');
 
         // Initialize everything
         document.addEventListener('DOMContentLoaded', () => {
             createAbstractBackground();
-            animateSections();
         });
     </script>
 </body>
