--- a/GitPGTutor/index.html
+++ b/GitPGTutor/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RevyNets Github Page Tutorial</title>
-    <link rel="stylesheet" href="../CSS/styles-main.css">
+    <link rel="stylesheet" href="CSS/styles-main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
 
 </head>
@@ -28,8 +28,6 @@
             <p>GitHub Pages adalah layanan hosting web statis yang memungkinkan Anda menerbitkan situs web langsung dari repositori GitHub Anda. Ini ideal untuk membuat situs web pribadi, portofolio, atau dokumentasi proyek. Tutorial ini akan memandu Anda langkah demi langkah dalam membuat dan menerbitkan situs web menggunakan GitHub Pages.</p>
         </section>
         
-            <div id="ads" class="section">
-            <h2>Sponsored Content</h2>
             <div class="ad-container">
                 <div class="ad-item">
                     <script type="text/javascript">
@@ -56,7 +54,6 @@
                     <script type="text/javascript" src="//www.topcreativeformat.com/497bbf939024f5f5a24aafd589c3f193/invoke.js"></script>
                 </div>
             </div>
-        </div>
 
         <section class="section">
             <h2>Prasyarat</h2>
