--- a/mc/index.html
+++ b/mc/index.html
@@ -86,5 +86,6 @@
     </div>
 
     <script src="../JS/scripts-main.js"></script>
+    <script src="../JS/scripts-mc.js"></script>
 </body>
 </html>
