--- a/search/index.html
+++ b/search/index.html
@@ -215,5 +215,6 @@
                     <script type="text/javascript" src="//www.topcreativeformat.com/497bbf939024f5f5a24aafd589c3f193/invoke.js"></script>
                 </div>
             </div>
+    <script src="../JS/scripts-search.js"></script>
 </body>
 </html>
