--- a/mc/index.html
+++ b/mc/index.html
@@ -57,7 +57,7 @@
 
          <section class="section" id="app-downloads">
             <h2>App Downloads</h2>
-            <div class="app-grid">
+            <div id="app-grid" class="app-grid">
                 
             </div>
         </section>
