--- a/search/index.html
+++ b/search/index.html
@@ -175,15 +175,12 @@
 </head>
 <body>
     <canvas id="abstract-bg"></canvas>
-    <header class="header">
-        <h1 class="header-title">RevyNets</h1>
-    </header>
     
     <section class="section">
         <div class="search-container">
-            <h1>Explore with Google</h1>
+            <h1>RevyNets</h1>
             <div class="search-wrapper">
-                <input type="text" id="search-input" class="search-input" placeholder="Cari game...">
+                <input type="text" id="search-input" class="search-input" placeholder="Google search..">
                 <lord-icon src="https://cdn.lordicon.com/wjyqkiew.json" trigger="hover" colors="primary:#000000,secondary:#000000" class="lordicon-container"></lord-icon>
             </div>
             <div id="suggestions"></div>
